--- a/Final Project.Rmd
+++ b/Final Project.Rmd
@@ -4,6 +4,7 @@ author: "Tomer Blum and Noa Shapira"
 date: "June 2021"
 output: 
   html_document:
+    keep_md: true
     theme: united
 ---
 <body style="background-color:lavender;">
